<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/cd_series_banner"
            android:src="@mipmap/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/name"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/banner"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <ImageView
            android:id="@+id/language"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/language_other"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/genre_1"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:src="@drawable/lang_other" />

        <ImageView
            android:id="@+id/genre_1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/cd_series_genre"
            app:layout_constraintEnd_toStartOf="@+id/language"
            app:layout_constraintStart_toEndOf="@+id/genre_2"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:src="@drawable/ic_genre_action" />

        <ImageView
            android:id="@+id/genre_2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/cd_series_genre"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/genre_1"
            app:layout_constraintStart_toEndOf="@+id/genre_3"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:src="@drawable/ic_genre_adventure"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/genre_3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/cd_series_genre"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/genre_2"
            app:layout_constraintStart_toEndOf="@+id/banner"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:src="@drawable/ic_genre_anime"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/rating"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/cd_rating"
            android:src="@drawable/ic_rating"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/language"
            app:layout_constraintStart_toStartOf="@+id/language"
            app:layout_constraintTop_toBottomOf="@+id/language" />

        <TextView
            android:id="@+id/rating_value"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:textColor="@color/slot3"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/rating"
            app:layout_constraintEnd_toStartOf="@+id/rating"
            app:layout_constraintStart_toEndOf="@+id/banner"
            app:layout_constraintTop_toTopOf="@+id/rating"
            tools:text="8.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
